--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "for-never-home",
   "version": "0.0.0",
   "scripts": {
-    "start": "vue-cli-service serve",
+    "start": "node app",
     "dev": "vite",
-    "build": "vue-cli-service build",
+    "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit",
-    "lint": "vue-cli-service lint"
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
     "vue": "^3.2.37"
