--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "for-never-home",
   "version": "0.0.0",
+  "engines": {
+    "node": "16.14.2"
+  },
   "scripts": {
-    "start": "node app",
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
