--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "for-never-home",
   "version": "0.0.0",
   "engines": {
-  "node": "16.14.2"
+    "node": "16.14.2"
   },
   "scripts": {
     "dev": "vite",
@@ -12,6 +12,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "vue": "^3.2.37"
   },
   "devDependencies": {
