--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,13 @@
   "extends": "@vue/tsconfig/tsconfig.web.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "compilerOptions": {
+    "allowJs": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
   },
-  
+
   "references": [
     {
       "path": "./tsconfig.config.json"
